--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -10,7 +10,7 @@
     border-radius: 5px;
     transition: all 0.3s ease;
     transform: translateX(100%);
-    padding: 0;
+    padding: 6px;
 }
 
 .open{
